k8s/engine-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  selector:
    matchLabels:
      app: creatify-marketplace
      type: engine
  template:
    metadata:
      labels:
        app: creatify-marketplace
        type: engine
    spec:
      containers:
        - name: myapp
          image: 560914023379.dkr.ecr.us-east-2.amazonaws.com/marketplace-engine
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
          ports:
            - containerPort: 8000
          volumeMounts:
            - mountPath: "/app/.env"
              subPath: ".env"
              name: creatify-engine-env-file
              readOnly: true

      volumes:
        - name: creatify-engine-env-file
          secret:
            secretName: creatify-engine-env-secret
