k8s/gateway-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myraid-flow
spec:
  selector:
    matchLabels:
      app: myraid-flow
      type: engine
  template:
    metadata:
      labels:
        app: myraid-flow
        type: engine
    spec:
      containers:
        - name: myraid-flow
          image: public.ecr.aws/s8n8b4h8/myriad-flow-gateway
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
          ports:
            - containerPort: 8000
          volumeMounts:
            - mountPath: "/app/.env"
              subPath: ".env"
              name: myriad-flow-engine-env-file
              readOnly: true
      volumes:
        - name: myriad-flow-engine-env-file
          secret:
            secretName: myriad-flow-engine-env-secret
