k8s/postgres-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-app
spec:
  selector:
    matchLabels:
      app: myraid-flow
      type: postgres-database
  template:
    metadata:
      labels:
        app: myraid-flow
        type: postgres-database
    spec:
      containers:
        - name: postgres-app
          image: postgres
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: "/var/lib/postgresql/"
              subPath: "data"
              name: postgres-pv-storage
      volumes:
        - name: postgres-pv-storage
          persistentVolumeClaim:
            claimName: gateway-postgres-pv-claim
