k8s/engine-service.yml
apiVersion: v1
kind: Service
metadata:
  name: engine-service
spec:
  type: NodePort
  selector:
    app: creatify-marketplace
    type: engine
  ports:
    - port: 8000
      targetPort: 8000
