k8s/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
spec:
  selector:
    app: creatify-marketplace
    type: postgres-database
  ports:
    - port: 5432
      targetPort: 5432
