k8s/engine-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: marketplace-ingress
  labels:
    app: creatify-marketplace
    type: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    alb.ingress.kubernetes.io/group.name: lazarous-alb
spec:
  tls:
    - hosts:
        - marketplace-engine.lazarus.network
      secretName: marketplace-engine.lazarus.network-tls-secret
  rules:
    - host: marketplace-engine.lazarus.network
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: engine-service
                port:
                  number: 8000
